# llama-wrangler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/llama_deck/: llama_manager.py  server.py  system_monitor.py
src/llama_deck/static/: index.html
src/llama_wrangler/: __init__.py  cli.py  config.py  gpu_monitor.py  llama_manager.py  model_manager.py  server.py  system_monitor.py
src/llama_wrangler/_vendor/: httpserver.py
src/llama_wrangler/static/: index.html
